k8s/test/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: loft-api
  namespace: loft-test
spec:
  selector:
    app: loft-api
  ports:
    - port: 80
      targetPort: http
