k8s/test/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: loft-test
spec:
  selector:
    app: loft-postgres
  ports:
    - port: 5432
      targetPort: 5432
