k8s/test/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: loft-web
  namespace: loft-test
spec:
  selector:
    app: loft-web
  ports:
    - port: 80
      targetPort: http
